DT-2004-08-11-0: Bugfix.:   o Rolled back dangerous fix from DT-2004-07-21-1
                 Doc.:      o Cleaned up man3, man8, and submit.1 man pages
                 Issue:     1170
                 Review:    DT,SG

MD-2004-08-10-0: Bugfix:    Refix Issue 1113
                 Issue:     1214
                 Bugtraq:   5084927
                 Review:    HP
                 Changed:   inst_sge

CR-2004-08-09-0: Bugfix:    fixed fix for CR-2004-08-05-2
                            execd may exit when hostname resolving is changed
                            or not available.
                 Review:    AA

SG-2004-08-09-0: Bugfix:    the reporting file was not written correctly under
                            linux on opteron.
                 Issze:     1207
                 Bugtraq:   5084317
                 Review:    AA

CR-2004-08-06-0: Bugfix:    Wrong entry SGE_QMASTER_PORT in qconf man page
                 Issue:     1112
                 Changed:   qconf man page
                 Review:    AA

CR-2004-08-05-2: Bugfix:    Need more verbose diagnosis msg if execd port is 
                            already bound
                 Issue:     1101
                 Bugtraq:   5083115
                 Changed:   commlib, execd, gdi, japi
                 Review:    SG

AA-2004-08-05-0: Bugfix:    tight integration doesn't work with CSP
                 Issue:     1080
                 Bugtraq:   5063314
                 Changed:   all
                 Review:    CR

SG-2005-08-05-0: Change:    removed the reference to the JC_FILTER as a
                            scheduler param from the man page
                 Changed:   schedd_conf.5

EB-2004-08-05-0: Bugfix:    hostgroup changes do not always take effect.
                 Issues:    1185
                 Bugtraq:   5083102
                 Changed:   qmaster
                 Review:    SG

CR-2004-08-05-1: Bugfix:    killed slave task on tight integration does 